Update & fix bug
Change version CraftBukkit to Spigot remapped